--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
 
     <div class="navbar">
         <ul id="navList">
-            <li>Home</li>
-            <li>Products</li>
-            <li>SAP Services and Support</li>
-            <li>Industries</li>
+            <a href="#home">
+                <li>Home</li>
+            </a>
+            <a href="#product">
+                <li>Products</li>
+            </a>
+            <a href="#servicesAndSupport">
+                <li>SAP Services and Support</li>
+            </a>
+            <a href="#Industries">
+                <li>Industries</li>
+            </a>
             <li>About Company</li>
             <li>Contact</li>
         </ul>
@@ -33,7 +41,7 @@
 
 
     <!--  HOME PAGE  -->
-    <div class="SectionName">
+    <div class="SectionName" id="home">
         <h3>HOME</h3>
     </div>
 
@@ -73,7 +81,7 @@
 
     <!--  Products page -->
 
-    <div class="Products">
+    <div class="Products" id="product">
         <h3>PRODUCTS</h3>
         <ul>
             <li>SAP Business One</li>
@@ -310,7 +318,7 @@
 
     <!-- SAP Services and Support -->
 
-    <div class="ServicesAndSupport">
+    <div class="ServicesAndSupport" id="servicesAndSupport">
         <h2>SAP SERVICES AND SUPPORT</h2>
         <ul>
             <li>SAP Implementation</li>
@@ -495,7 +503,10 @@
         </div>
     </div>
 
-    <div class="industries">
+
+    <!-- Industries -->
+
+    <div class="industries" id="Industries">
         <h2>INDUSTRIES</h2>
         <img src="images/industry-solution-from-sap.jpg">
         <div class="industriesList">
